Changelog
=========


2.0.2 - unreleased
------------------

- Add MANIFEST.in.
  [WouterVH]


2.0.1 - 2010-07-18
------------------

- Update license to GPL version 2 only.
  [hannosch]


2.0 - 2010-07-01
----------------

- 'login' is a noun; 'log in' is a verb. Fixes #10025.
  [davisagli]


2.0b3 - 2010-02-17
------------------

- Updated login-related templates to the recent markup conventions.
  References http://dev.plone.org/plone/ticket/9981.
  [spliter]

- Updated templates to disable the columns with 'disable_MANAGER_NAME' pattern.
  [spliter]


2.0b2 - 2009-12-27
------------------

- Clarified package metadata.
  [hannosch]


2.0b1 - 2009-12-01
------------------

- Make html structure of openid login section similar to plone login
  section so that we can use same css.
  [smcmahon]

- Point to users to @@register instead of @@join_form.
  [esteele]


2.0a1 - 2009-11-17
------------------

- Correctly implement the 'available' property of the portlet renderer so
  that a column with only an openid portlet doesn't show up when logged in.
  [davisagli]

- Make sure the GenericSetup profile shows up on the Plone site add form.
  [davisagli]

- Added a metadata.xml to the GenericSetup profile.
  [davisagli]

- Register the ploneopenid-various GenericSetup import step using ZCML.
  [davisagli]

- Replaced the css_slot with the style_slot, as it is deprecated.
  [maurits]

- Made compatible with Plone 4.0.  Show different labels on login form
  when site_properties/use_email_as_login is switched on (Plone 4.0).
  Should still work in earlier Plones.
  Refs http://dev.plone.org/plone/ticket/9214
  [maurits]

- Made the addLoginPortlet function a bit more forgiving, when portlets aren't
  available.
  [hannosch]

- Added the z3c.autoinclude entry point so this package is automatically loaded
  on Plone 3.3 and above.
  [hannosch]

- Avoid a test dependency on quick installer.
  [hannosch]

- Use our own PloneMessageFactory and remove the dependency on CMFPlone.