@@ -38,7 +38,7 @@ setup(name='plone.app.openid',
         'zope.i18nmessageid',
         'zope.interface',
         'Products.CMFCore',
-        'Products.PlonePAS',
+        'Products.PlonePAS>=2.0.10dev',
         'Products.PluggableAuthService',
         'Zope2',
       ],
